feat: complete all remaining tasks (Feature 9-17) for ForgeFit